<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.dicoding.submissionmade1.ui.home.HomeFragment"
        android:label="@string/titleHome"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_upcoming"
        android:name="com.dicoding.submissionmade1.ui.upcoming.UpcomingFragment"
        android:label="@string/titleUpcoming"
        tools:layout="@layout/fragment_upcoming" />

    <fragment
        android:id="@+id/navigation_finished"
        android:name="com.dicoding.submissionmade1.ui.finished.FinishedFragment"
        android:label="@string/titleFinished"
        tools:layout="@layout/fragment_finished" />

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.dicoding.submissionmade1.ui.search.SearchFragment"
        android:label="@string/titleSearch"
        tools:layout="@layout/fragment_search" />
</navigation>